# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("flow") {
  sources = [
    "compositor_context.cc",
    "compositor_context.h",
    "gl_connection.cc",
    "gl_connection.h",
    "instrumentation.cc",
    "instrumentation.h",
    "layers/backdrop_filter_layer.cc",
    "layers/backdrop_filter_layer.h",
    "layers/child_scene_layer.cc",
    "layers/child_scene_layer.h",
    "layers/clip_path_layer.cc",
    "layers/clip_path_layer.h",
    "layers/clip_rect_layer.cc",
    "layers/clip_rect_layer.h",
    "layers/clip_rrect_layer.cc",
    "layers/clip_rrect_layer.h",
    "layers/color_filter_layer.cc",
    "layers/color_filter_layer.h",
    "layers/container_layer.cc",
    "layers/container_layer.h",
    "layers/layer.cc",
    "layers/layer.h",
    "layers/layer_tree.cc",
    "layers/layer_tree.h",
    "layers/opacity_layer.cc",
    "layers/opacity_layer.h",
    "layers/performance_overlay_layer.cc",
    "layers/performance_overlay_layer.h",
    "layers/picture_layer.cc",
    "layers/picture_layer.h",
    "layers/shader_mask_layer.cc",
    "layers/shader_mask_layer.h",
    "layers/transform_layer.cc",
    "layers/transform_layer.h",
    "open_gl.h",
    "raster_cache.cc",
    "raster_cache.h",
    "texture_image.cc",
    "texture_image.h",
  ]

  deps = [
    "//flutter/glue",
    "//flutter/skia",
    "//lib/ftl",
    "//mojo/services/gfx/composition/interfaces",
  ]

  if (is_fuchsia) {
    # TODO(abarth): In principle, we should add "//mojo/public/c/gpu" as a
    # dependency, but that doesn't work currently because GPU support on Fuchsia
    # is still a work in progress.
    include_dirs = [
      "//mojo/public/c/gpu",
    ]
  }
}
