# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("flow") {
  sources = [
    "bitmap_image.cc",
    "bitmap_image.h",
    "compositor_context.cc",
    "compositor_context.h",
    "instrumentation.cc",
    "instrumentation.h",
    "layers/backdrop_filter_layer.cc",
    "layers/backdrop_filter_layer.h",
    "layers/clip_path_layer.cc",
    "layers/clip_path_layer.h",
    "layers/clip_rect_layer.cc",
    "layers/clip_rect_layer.h",
    "layers/clip_rrect_layer.cc",
    "layers/clip_rrect_layer.h",
    "layers/color_filter_layer.cc",
    "layers/color_filter_layer.h",
    "layers/container_layer.cc",
    "layers/container_layer.h",
    "layers/layer.cc",
    "layers/layer.h",
    "layers/layer_tree.cc",
    "layers/layer_tree.h",
    "layers/opacity_layer.cc",
    "layers/opacity_layer.h",
    "layers/performance_overlay_layer.cc",
    "layers/performance_overlay_layer.h",
    "layers/picture_layer.cc",
    "layers/picture_layer.h",
    "layers/shader_mask_layer.cc",
    "layers/shader_mask_layer.h",
    "layers/transform_layer.cc",
    "layers/transform_layer.h",
    "raster_cache.cc",
    "raster_cache.h",
    "scene_update_context.cc",
    "scene_update_context.h",
    "texture_image.h",
  ]

  deps = [
    "//flutter/common",
    "//flutter/glue",
    "//flutter/synchronization",
    "//lib/ftl",
    "//third_party/skia",
    "//third_party/skia:gpu",
  ]

  if (is_fuchsia) {
    sources += [
      "layers/child_scene_layer.cc",
      "layers/child_scene_layer.h",
      "texture_image_none.cc",
    ]
    public_deps = [
      "//apps/mozart/lib/skia",
      "//apps/mozart/services/composition",
    ]
  } else {
    sources += [
      "gl_connection.cc",
      "gl_connection.h",
      "open_gl.h",
      "texture_image_gles2.cc",
    ]
  }
}
