# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia || is_fuchsia_host)

import("//build/dart/dart_library.gni")

dart_library("flutter_kernel_transformers") {
  disable_analysis = true
  package_name = "flutter_kernel_transformers"

  sources = [
    "track_widget_constructor_locations.dart",
  ]

  deps = [
    "//third_party/dart/pkg/front_end",
    "//third_party/dart/pkg/kernel",
    "//third_party/dart/pkg/vm",
    "//third_party/dart-pkg/pub/meta",
  ]
}
